--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ _testmain.go
 *.exe
 *.test
 *.prof
+.DS_Store
+.idea/
+config/
+jobs/
+main.go
+speedy.iml
+tests/
+utils/
+web/
+wechat.iml
+wechat/
