--- a/config/speedy.conf
+++ b/config/speedy.conf
@@ -8,5 +8,7 @@ redis.poolsize=10
 wechat.token=speedy
 wechat.appid=wx33ef5f22355be736
 wechat.appsecret=00bb24c73fa2333519bc075196950a55
+wechat.oauth2.url=http://localhost/oauth2
+wechat.oauth2.type=snsapi_userinfo
 wechat.test.data={"button":[{"name":"首页","sub_button":[{"name":"test","type":"click","key":"11"}]},{"name":"搜索","sub_button":[{"name":"test","type":"click","key":"11"}]},{"name":"帮助","sub_button":[{"name":"test","type":"click","key":"11"}]}]}
 
